# Firefly

./: package.json  pnpm-lock.yaml  wrangler.toml
code/can.huawei/3.5/: 03.05_tiling_template_attr_tbuf_workspace (1).ipynb
code/can.huawei/APIMethod/: temaple1.cpp
code/can.huawei/Sigmoid/: sigmoid.cpp
public/gallery/HONG-1/: urls.txt
public/gallery/encrypted-test/: urls.txt
public/gallery/firefly-2026/: urls.txt
src/components/comment/: Twikoo.astro
src/components/features/: SnowflakeEffect.astro
src/components/layout/: PostCard.astro  PostMeta.astro
src/components/widget/: Profile.astro  SiteStats.astro  TwikooSiteStats.astro
src/config/: announcementConfig.ts  backgroundWallpaper.ts  commentConfig.ts  effectsConfig.ts  friendsConfig.ts  galleryConfig.ts  musicConfig.ts  navBarConfig.ts  profileConfig.ts  sidebarConfig.ts  siteConfig.ts  sponsorConfig.ts
src/constants/: icons.ts
src/content/posts/: cpp-macros.md  firefly.md
src/content/posts/JAVA/MD/C++ ——干货/CS/C++/: C++.md  CMakeLists.txt  CMakePresets.json  main.cpp  main2.cpp
src/content/posts/JAVA/MD/C++ ——干货/CS/C++/include/: Circle.h  Music.hpp  Person.h  Point.h  shape.h  swap.h
src/content/posts/JAVA/MD/C++ ——干货/CS/C++/src/: Circle.cpp  Point.cpp  swap.cpp
src/content/spec/: about.md  friends.mdx
src/i18n/: i18nKey.ts
src/i18n/languages/: en.ts  ja.ts  ru.ts  zh_CN.ts  zh_TW.ts
src/layouts/: Layout.astro
src/pages/api/: twikoo-stats.json.ts
src/styles/: custom-scrollbar.css  main.css  navbar.css  variables.styl
src/types/: config.ts
src/utils/: gallery-utils.ts
(+29 files in other folders)
